fix(style): make vertical align less opinionated

--- a/packages/veui-theme-dls/components/badge.less
+++ b/packages/veui-theme-dls/components/badge.less
@@ -4,7 +4,6 @@
   position: relative;
   display: inline-flex;
   align-items: center;
-  vertical-align: middle;
 
   &-main {
     .absolute(0, 0, _, _);
