--- a/packages/veui-theme-dls/components/dropdown.less
+++ b/packages/veui-theme-dls/components/dropdown.less
@@ -4,7 +4,6 @@
 .@{veui-prefix}-dropdown {
   &:extend(._veui-dropdown-button all);
   display: inline-flex;
-  vertical-align: middle;
 
   &-box {
     pointer-events: none;
