--- a/packages/veui-theme-dls/components/pagination.less
+++ b/packages/veui-theme-dls/components/pagination.less
@@ -2,7 +2,6 @@
 
 .@{veui-prefix}-pagination {
   display: inline-flex;
-  vertical-align: middle;
   font-size: @dls-pagination-font-size-m;
 
   &,
