--- a/packages/veui-theme-dls/components/progress.less
+++ b/packages/veui-theme-dls/components/progress.less
@@ -3,7 +3,6 @@
 .@{veui-prefix}-progress {
   display: inline-flex;
   align-items: center;
-  vertical-align: middle;
   position: relative;
   color: @dls-progress-font-color;
   .veui-transition(color);
