--- a/packages/veui-theme-dls/components/select.less
+++ b/packages/veui-theme-dls/components/select.less
@@ -8,7 +8,6 @@
   display: inline-flex;
   align-items: center;
   width: @dls-select-width;
-  vertical-align: middle;
   outline: none;
 
   &:not(&-empty):not(&-expanded)
