--- a/packages/veui-theme-dls/components/tag.less
+++ b/packages/veui-theme-dls/components/tag.less
@@ -4,7 +4,6 @@
   position: relative;
   display: inline-flex;
   align-items: center;
-  vertical-align: middle;
   .make-metrics(m);
   .padding(0, @dls-tag-padding);
   white-space: nowrap;
